--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,129 @@
-html {
-  font-family: 'Roboto', sans-serif;
+/* GLOBAL STYLESHEET
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+:root {
+  --base-font-family: -apple-system, BlinkMacSystemFont, San Francisco, Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
+  --base-font-size: 16px;
+
+  /* App color palette */
+  --color-text-base: #111;
+  --color-text-secondary: #767676;
+  --color-border-base: #d1d1d1;
+  --color-border-active: #767676;
+  --color-link: #767676;
+  --color-active-link: #111;
+  --color-white: #fff;
+}
+
+body {
+  font-family: var(--base-font-family);
+  font-size: var(--base-font-size);
+  font-weight: 400;
+  line-height: 1.6;
+}
+
+a {
+  color: var(--color-link);
+  transition: color .1s ease-in-out;
+}
+
+a:hover {
+  color: var(--color-active-link);
+}
+
+
+/* HEADER
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.page-header {
+  background-color: var(--color-white);
+  box-shadow: 0 4px 12px #00000014, 0 0 1px #0100001a;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  padding: 0 32px;
+}
+
+.page-header ul {
+  list-style: none;
+  font-weight: 500;
+}
+
+.page-header ul li {
+  padding: 20px 12px;
+}
+
+.page-header ul a {
+  text-decoration: none;
+}
+
+.page-header .logo {
+  font-family: 'Cinzel', serif;
+  user-select: none;
+  color: var(--color-text-base);
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.page-header .search-button {
+  background-color: var(--color-white);
+  border: 1px solid var(--color-border-base);
+  color: var(--color-text-secondary);
+  font-size: 14px;
+  height: 32px;
+  line-height: 30px;
+  padding: 0 12px;
+  box-shadow: 0 1px 1px #0000000a;
+  border-radius: 4px;
+  transition: all .1s ease-in-out;
+  user-select: none;
+  cursor: pointer;
+}
+
+.page-header .search-button:hover {
+  color: var(--color-text-base);
+  border-color: var(--color-border-active);
+  box-shadow: 0 1px 2px #00000014;
+}
+
+
+/* FOOTER
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.page-footer {
+  flex-direction: column-reverse;
+  background: var(--color-white);
+  border-top: 1px solid var(--color-border-base);
+  align-items: center;
+}
+
+.page-footer ul {
+  list-style: none;
+  font-weight: 500;
+}
+
+.page-footer ul li {
+  max-width: 24px;
+}
+
+.page-footer ul li svg {
+  width: 100%;
+}
+
+.page-footer ul li:not(:last-child) {
+  margin-right: 20px;
+}
+
+/* FOOTER SCREEN SIZE SM+
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+@media screen and (min-width: 576px) {
+  .page-footer {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+
+/* MAIN CONTENT
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.main-content {
+  min-height: 100vh;
 }
