--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
-@import './app/general.css';
-@import './app/main.css';
-
+@import "./app/general.css";
+@import "./app/main.css";
 
 /* HEADER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -10,7 +9,7 @@
   position: sticky;
   top: 0;
   z-index: 2;
-  padding: 0 32px;
+  padding: 0 16px;
 }
 
 .page-header ul {
@@ -27,11 +26,16 @@
 }
 
 .page-header .logo {
-  font-family: 'Cinzel', serif;
+  font-family: "Merriweather", serif;
   user-select: none;
   color: var(--color-text-base);
   text-decoration: none;
   font-size: 24px;
+}
+
+.page-header .page-header__action {
+  display: flex;
+  align-items: center;
 }
 
 .page-header .search-button {
@@ -44,7 +48,7 @@
   padding: 0 12px;
   box-shadow: 0 1px 1px #0000000a;
   border-radius: 4px;
-  transition: all .1s ease-in-out;
+  transition: all 0.1s ease-in-out;
   user-select: none;
   cursor: pointer;
 }
@@ -55,6 +59,18 @@
   box-shadow: 0 1px 2px #00000014;
 }
 
+.page-header .menu-icon {
+  display: flex;
+  width: 24px;
+  height: 24px;
+  margin-left: 16px;
+}
+
+.page-header .menu-icon img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 
 /* FOOTER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
