--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,109 +1,4 @@
 @import "./app/general.css";
-@import "./app/main.css";
-
-/* HEADER
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.page-header {
-  background-color: var(--color-white);
-  box-shadow: 0 4px 12px #00000014, 0 0 1px #0100001a;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  padding: 0 16px;
-}
-
-.page-header ul {
-  list-style: none;
-  font-weight: 500;
-}
-
-.page-header ul li {
-  padding: 20px 12px;
-}
-
-.page-header ul a {
-  text-decoration: none;
-}
-
-.page-header .logo {
-  font-family: "Merriweather", serif;
-  user-select: none;
-  color: var(--color-text-base);
-  text-decoration: none;
-  font-size: 24px;
-}
-
-.page-header .page-header__action {
-  display: flex;
-  align-items: center;
-}
-
-.page-header .search-button {
-  background-color: var(--color-white);
-  border: 1px solid var(--color-border-base);
-  color: var(--color-text-secondary);
-  font-size: 14px;
-  height: 32px;
-  line-height: 30px;
-  padding: 0 12px;
-  box-shadow: 0 1px 1px #0000000a;
-  border-radius: 4px;
-  transition: all 0.1s ease-in-out;
-  user-select: none;
-  cursor: pointer;
-}
-
-.page-header .search-button:hover {
-  color: var(--color-text-base);
-  border-color: var(--color-border-active);
-  box-shadow: 0 1px 2px #00000014;
-}
-
-.page-header .menu-icon {
-  display: flex;
-  width: 24px;
-  height: 24px;
-  margin-left: 16px;
-}
-
-.page-header .menu-icon img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-/* FOOTER
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-.page-footer {
-  flex-direction: column-reverse;
-  background: var(--color-white);
-  border-top: 1px solid var(--color-border-base);
-  align-items: center;
-}
-
-.page-footer ul {
-  list-style: none;
-  font-weight: 500;
-}
-
-.page-footer ul li {
-  max-width: 24px;
-}
-
-.page-footer ul li svg {
-  width: 100%;
-}
-
-.page-footer ul li:not(:last-child) {
-  margin-right: 20px;
-}
-
-/* FOOTER SCREEN SIZE SM+
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-@media screen and (min-width: 576px) {
-  .page-footer {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
+@import "./app/layout.css";
+@import "./app/articles.css";
+@import "./app/blog.css";
