feat: add blockquote, em, u, s to blog post

--- a/assets/css/app/articles.css
+++ b/assets/css/app/articles.css
@@ -29,7 +29,7 @@
   font-size: 3rem;
   display: inline-block;
   color: var(--color-text-base);
-  font-family: "Merriweather", serif;
+  font-family: var(--base-font-serif);
   line-height: 1;
   user-select: none;
   background-repeat: no-repeat;
