--- a/assets/css/app/general.css
+++ b/assets/css/app/general.css
@@ -4,6 +4,7 @@
   --base-font-family: -apple-system, BlinkMacSystemFont, San Francisco,
     Helvetica Neue, Helvetica, Ubuntu, Roboto, Noto, Segoe UI, Arial, sans-serif;
   --base-font-size: 16px;
+  --base-font-serif: "Merriweather", serif;
 
   /* App color palette */
   --color-text-base: #111;
@@ -13,6 +14,7 @@
   --color-link: #767676;
   --color-link-blue: #02b3e4;
   --color-active-link: #111;
+  --color-bg-light: #fafafa;
   --color-white: #fff;
   --color-brown: #d79c6a;
 }
